# volnix

./: .env.example  .gitignore  =6.0  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_PRINCIPLES.md  IMPLEMENTATION_STATUS.md  LICENSE  MASTER_ISSUES.md  OPEN_QUESTIONS.md  README.md  SECURITY.md  pyproject.toml  terrarium.development.toml  terrarium.development.toml.bak  terrarium.toml  volnix.toml
.claude/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
dev_data/: bus.db  ledger.db  state.db
docs/: agent-integration.md  architecture.md  behavior-modes.md  blueprints-reference.md  configuration.md  creating-worlds.md  embedding_volnix.md  games.md  getting-started.md  internal-agents.md  internal-simulation.md  llm-providers.md  pending-work.md  service-packs.md  volnix-vision.md
examples/: README.md
examples/anthropic-sdk/: main.py
examples/autogen/: main.py
examples/crewai/: crew.py
examples/gemini-sdk/: main.py
examples/governance-test/: main.py
examples/langgraph/: terrarium_agent.py  volnix_agent.py
examples/launch-demo/: README.md
examples/mcp/: claude_desktop_config.json  main.py  stdio_config.json
examples/openai-sdk/: main.py
examples/pydanticai/: main.py
internal_docs/: binary-knitting-backus.md  terrarium-agency-engine-v2.md  terrarium-agent-integration-spec.md  terrarium-architecture.md  terrarium-browser-pack-implementation.md  terrarium-browser-pack-spec.md  terrarium-collab-communication-ext.md  terrarium-frontend-spec.md  terrarium-full-spec.md  terrarium-internal-simulation-deep-dive.md  terrarium-trading-pack-spec.md  terrarium-vision-v2.md  terrarium-world-definition-and-compiler.md  terrarium-worlds-fidelity-conditions_outdated.md
internal_docs/plans/: A1-persistence.md  A2-config.md  A4-ledger.md  B1-validation.md  B2-pipeline.md  C1-state-engine.md  C2-email-pack.md  C3-wire.md  D3-kernel.md  D4a-compiler-planning.md  E1-collaborative-communication.md  E1-gateway-mcp-http.md  E2-agent-integration-master.md  E2a-phase1-sdk-export-transport.md  E2b-phase2-api-surface-middleware.md  E2c-phase3-webhook-delivery.md  F1-F2-governance.md  F2-data-layer.md  F3-reporter.md  F3-run-list.md  F4-F5-runs.md  F4a-report-shell.md  F4b-report-data-tabs.md  F5a-live-feed.md  F5b-live-context.md  F6-compare.md  F7-polish.md  F8-backend-integration.md  G2-tier2-profiles-implementation.md  G3-animator.md  G4a-feedback-promotion.md  G4b-sync-signals.md  H1-cli-implementation.md  agency-engine-v1-implementation.md  buzzing-honking-valiant.md  frontend-architecture.md  frontend-implementation-master.md  plan-a-visibility-scoping.md  plan-b-cli-preset-actors.md  plan-c-auto-deliverable.md  (+2 more)
plans/: A3-bus.md  B3-llm.md  B4-registry.md  D1-reality.md  D2-actors.md
scripts/: check-providers.sh  start-acp.sh  test-providers.sh
terrarium/: __init__.py  __main__.py  app.py  cli.py  cli_helpers.py  paths.py  sdk.py
terrarium-dashboard/: .env.example  IMPLEMENTATION_STATUS.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
terrarium-dashboard/src/: app.tsx  main.tsx
terrarium/actors/: __init__.py  config.py  definition.py  generator.py  internal_profile.py  personality.py  profile.py  registry.py  replay.py  simple_generator.py  slot_binding.py  slot_manager.py  state.py  trait_extractor.py
terrarium/adapters/: __init__.py  _schema.py  autogen.py  crewai.py  langgraph.py
terrarium/bus/: __init__.py  bus.py  config.py  fanout.py  middleware.py  persistence.py  replay.py  types.py
terrarium/cli_exports/: attach.py  templates.py
terrarium/config/: __init__.py  loader.py  registry.py  schema.py  tunable.py  validation.py
terrarium/core/: __init__.py  context.py  engine.py  envelope.py  errors.py  events.py  protocols.py  types.py
terrarium/dashboard/: __init__.py  app.py
terrarium/deliverable_presets/: assessment.yaml  loader.py  prediction.yaml  synthesis.yaml
terrarium/engines/: __init__.py
terrarium/gateway/: __init__.py  auth.py  config.py  gateway.py  middleware.py  monitor.py  rate_limiter.py  router.py
terrarium/kernel/: __init__.py  categories.py  context_hub.py  external_spec.py  mapping.py  openapi_provider.py  primitives.py  registry.py  resolver.py  surface.py
terrarium/ledger/: __init__.py  config.py  entries.py  export.py  ledger.py  query.py
terrarium/llm/: __init__.py  config.py  conversation.py  provider.py  registry.py  router.py  secrets.py  tracker.py  types.py
terrarium/middleware/: __init__.py  auth.py  prefix_router.py  status_codes.py
terrarium/packs/: __init__.py  base.py  loader.py  profile_infer.py  profile_loader.py  profile_registry.py  profile_surface.py  registry.py  runtime.py
terrarium/persistence/: __init__.py  append_log.py  config.py  database.py  manager.py  migrations.py  snapshot.py  sqlite.py
terrarium/pipeline/: __init__.py  builder.py  config.py  dag.py  side_effects.py  step.py
terrarium/presets/: ideal.yaml  messy.yaml
terrarium/reality/: __init__.py  config.py  dimensions.py  expander.py  labels.py  overlays.py  presets.py  seeds.py
terrarium/registry/: __init__.py  composition.py  health.py  registry.py  wiring.py
terrarium/runs/: __init__.py  artifacts.py  comparison.py  (+4 more)
terrarium_data/: bus.db  ledger.db
tests/: conftest.py  test_audit_fixes.py  test_collaborative_communication.py  test_collaborative_harness.py  test_paths.py
tnl/: animator-event-volume-reduction.tnl  animator-tick-serialization.tnl  embedding-volnix-guide.tnl  llm-call-entry-use-case-attribution.tnl  llm-router-streaming-surface.tnl  session-scoped-memory.tnl  volnix-app-public-llm-router.tnl  volnix-app-public-memory-engine.tnl  volnix-app-public-session-manager.tnl  workflow.tnl  world-plan-character-auto-dereference.tnl  world-plan-lightweight-mode.tnl
volnix/: __init__.py  __main__.py  app.py  cli.py  cli_helpers.py  paths.py  sdk.py
volnix-dashboard/: .env.example  .gitignore  index.html  package.json  vite.config.ts
(+1319 files in other folders)
