[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terrarium"
version = "0.1.0"
description = "Programmable worlds for artificial intelligence"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "aiosqlite>=0.19",
    "typer>=0.9",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "httpx>=0.24",
    "mcp>=1.0",
    "anthropic>=0.30",
    "openai>=1.0",
    "acp-sdk>=1.0.0",
    "agent-client-protocol>=0.8.0",
    "google-genai>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.5",
]

[project.scripts]
terrarium = "terrarium.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.coverage.run]
source = ["terrarium"]

[tool.coverage.report]
fail_under = 80
