[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "volnix"
version = "0.1.0"
description = "Programmable worlds for artificial intelligence"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "Janarthanan Rajendran"},
]
keywords = ["ai", "agents", "world-simulator", "dynamic-world", "simulation", "mcp", "governance", "multi-agent", "prediction", "synthesis", "tool-use", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/janaraj/volnix"
Documentation = "https://github.com/janaraj/volnix/tree/main/docs"
Repository = "https://github.com/janaraj/volnix"
Issues = "https://github.com/janaraj/volnix/issues"
dependencies = [
    "pydantic>=2.0",
    "aiosqlite>=0.19",
    "typer>=0.9",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "httpx>=0.24",
    "mcp>=1.0",
    "anthropic>=0.30",
    "openai>=1.0",
    "acp-sdk>=1.0.0",
    "agent-client-protocol>=0.8.0",
    "google-genai>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.5",
]

[project.scripts]
volnix = "volnix.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
xfail_strict = true
markers = [
    "architecture: source-level and dependency-boundary guardrails",
    "contract: protocol and data-contract conformance checks",
    "real_adapter: runtime-backed adapter tests using real app components",
    "staged_guardrail: staged fail-closed guardrail; becomes xfail unless guardrails strict mode is enabled",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.coverage.run]
source = ["volnix"]

[tool.coverage.report]
fail_under = 90
